--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,14 +1,94 @@
-fastapi
-uvicorn[standard]
-newspaper3k
-transformers
-torch
-sentencepiece
-spacy
-pydantic
-pytest
-pytest-asyncio
-httpx
-pytest-cov
-pytest-mock
-requests-mock
+annotated-types==0.7.0
+anyio==4.9.0
+beautifulsoup4==4.13.4
+blis==1.3.0
+catalogue==2.0.10
+certifi==2025.4.26
+charset-normalizer==3.4.2
+click==8.1.8
+cloudpathlib==0.21.1
+colorama==0.4.6
+confection==0.1.5
+coverage==7.8.2
+cssselect==1.3.0
+cymem==2.0.11
+en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
+fastapi==0.115.12
+feedfinder2==0.0.4
+feedparser==6.0.11
+filelock==3.18.0
+fsspec==2025.3.2
+h11==0.16.0
+httpcore==1.0.9
+httptools==0.6.4
+httpx==0.28.1
+huggingface-hub==0.31.4
+idna==3.10
+iniconfig==2.1.0
+jieba3k==0.35.1
+Jinja2==3.1.6
+joblib==1.5.0
+langcodes==3.5.0
+language_data==1.3.0
+lxml==5.4.0
+lxml_html_clean==0.4.2
+marisa-trie==1.2.1
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+mpmath==1.3.0
+murmurhash==1.0.12
+networkx==3.4.2
+newspaper3k==0.2.8
+nltk==3.9.1
+numpy==2.2.6
+packaging==25.0
+pillow==11.2.1
+pluggy==1.6.0
+preshed==3.0.9
+pydantic==2.11.4
+pydantic_core==2.33.2
+Pygments==2.19.1
+pytest==8.3.5
+pytest-asyncio==0.26.0
+pytest-cov==6.1.1
+pytest-mock==3.14.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.3
+requests-file==2.1.0
+requests-mock==1.12.1
+rich==14.0.0
+safetensors==0.5.3
+sentencepiece==0.2.0
+sgmllib3k==1.0.0
+shellingham==1.5.4
+six==1.17.0
+smart-open==7.1.0
+sniffio==1.3.1
+soupsieve==2.7
+spacy==3.8.6
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+srsly==2.5.1
+starlette==0.46.2
+sympy==1.14.0
+thinc==8.3.6
+tinysegmenter==0.3
+tldextract==5.3.0
+tokenizers==0.21.1
+torch==2.7.0
+tqdm==4.67.1
+transformers==4.51.3
+typer==0.15.4
+typing-inspection==0.4.0
+typing_extensions==4.13.2
+urllib3==2.4.0
+uvicorn==0.34.2
+wasabi==1.1.3
+watchfiles==1.0.5
+weasel==0.4.1
+websockets==15.0.1
+wrapt==1.17.2
