--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "newsguard-ai-frontend",
+  "name": "clickbait-and-switch-ai-frontend",
   "private": true,
   "version": "0.1.0",
   "type": "module",
